--- a/firstMain/src/main/resources/application.yaml
+++ b/firstMain/src/main/resources/application.yaml
@@ -3,8 +3,8 @@ server:
   servlet:
     context-path: /demo
 jwt:
-  secret: 12343edsfrefer423sdxfxfzxfew23
-  lifetime: 30m
+  secret: 984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
+  lifetime: 10m
 spring:
   datasource:
     driver-class-name: org.h2.Driver
@@ -15,10 +15,11 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect:h2Dialect
+        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
       settings:
         web-allow-others: false
-
+  main:
+    allow-circular-references: true
