--- a/firstMain/src/main/resources/application.yaml
+++ b/firstMain/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 server:
   port: 8189
   servlet:
-    context-path: /demo
+    context-path:
 jwt:
   secret: 984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
   lifetime: 10m
@@ -16,6 +16,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
   h2:
     console:
       enabled: true
@@ -23,3 +25,4 @@ spring:
         web-allow-others: false
   main:
     allow-circular-references: true
+
